<resources>
    <string name="app_name">School Bus</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoidG8taW4iLCJhIjoiY2pxcXg0ZnFnMDRyYjN6cXBiMmtuMmtsayJ9.cuXDeNrhOKd9thppArJIIg</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="customer_registration">Student</string>
    <string name="customer">Student</string>
    <string name="user_type">Bus Services</string>
    <string name="driver">Driver</string>
    <string name="driver_n">Driver</string>
    <string name="logout">LogOut</string>
    <string name="driver_start_navigation">Driver</string>
    <string name="customer_start_navigation">Customer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="this_is_redirected">This is Redirected</string>
    <string name="getting_your_driver">Getting Your Driver</string>
    <string name="DriverSearch">Looking For Driver Location</string>
    <string name="driverFound">Driver Found</string>
    <string name="noDirection">Not Able to Direct</string>
    <string name="start">Start</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="students_approaching_bus">Students approaching Bus</string>
    <string name="school_student">School Student</string>
    <string name="school_bus_with_driver">School Bus with Driver</string>
    <string name="android_photo">Test Photo</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="school_and_student">School and student</string>
    <string name="title_activity_student_login_logout">StudentLoginLogout</string>
    <string name="title_activity_driver_login_logout">DriverLoginLogout</string>
    <string name="student">Student</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
</resources>
