<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMapActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapViewCustomer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="25.625961"
        mapbox:mapbox_cameraTargetLng="85.106265"
        mapbox:mapbox_cameraZoom="12"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v11" >

    </com.mapbox.mapboxsdk.maps.MapView>

    <Button
        android:id="@+id/startCus"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.643"
        mapbox:layout_constraintStart_toEndOf="@+id/logout"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="visible"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.837"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toBottomOf="@+id/mapViewCustomer"
        mapbox:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/request"
        android:layout_width="339dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:text="@string/customer_start_navigation"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.724"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="0.015" />

</android.support.constraint.ConstraintLayout>